# Microcosme

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/Interface/: IDisplay.hpp
src/Menu/: Menu.cpp  Menu.hpp
src/Playground/: Playground.cpp  Playground.hpp
src/Simulation/: Simulation.cpp  Simulation.hpp
src/components/Button/: Button.cpp  Button.hpp
